# trace-iam-evidence

./: .gitignore  CHANGELOG.md  README.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_persistence_foundation.py  0002_investigation_timeline.py
backend/scripts/: build_release_pack.py  run_typecheck.py
backend/src/trace_iam/: __init__.py  comparison.py  main.py  operational.py  release.py
backend/src/trace_iam/api/: __init__.py  case_guard.py  comparison_routes.py  evidence_routes.py  guest_routes.py  operational_routes.py  resource_routes.py  routes.py  timeline_routes.py
backend/src/trace_iam/application/: __init__.py  analysis.py
backend/src/trace_iam/domain/: __init__.py  models.py  rules.py
backend/src/trace_iam/evidence/: __init__.py  entra_signin_csv.py  manual_conditional_access.py  manual_guest_b2b.py  manual_resource_assignment.py
backend/src/trace_iam/persistence/: __init__.py  database.py  models.py  repository.py  runtime.py  serialization.py  timeline.py  timeline_hooks.py
backend/tests/: test_case_lifecycle_api.py  test_comparison.py  test_conditional_access_rule.py  test_csv_api.py  test_domain_contracts.py  test_entra_csv_analysis.py  test_entra_signin_csv.py  test_evidence_workspace.py  test_guest_b2b.py  test_health.py  test_history_workflows.py  test_operational.py  test_persistence.py  test_release_proof.py  test_resource_assignment_rule.py  test_runtime_initialization.py  test_structured_analysis_api.py  test_timeline.py  test_trace_database_utility.py
docs/: architecture.md  (+24 more)
(+53 files in other folders)
