[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "trace-iam-evidence-backend"
version = "0.1.0"
description = "Backend for the TRACE IAM evidence investigation workbench"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "pydantic==2.11.4",
  "uvicorn==0.34.2",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.15.0",
  "pytest==8.3.5",
  "ruff==0.11.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trace_iam"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["trace_iam"]
